--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,7 @@
           <keywords>true</keywords>
           <links>
             <link>http://download.oracle.com/javase/6/docs/api/</link>
+            <link>https://www.unboundid.com/products/ldapsdk/docs/javadoc/</link>
             <link>http://junit.sourceforge.net/javadoc/</link>
           </links>
         </configuration>
@@ -228,7 +229,6 @@
     <!-- build properties -->
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.build.javaLevel>1.6</project.build.javaLevel>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   
 </project>
