--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
   <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>ldap-unit</name>
+  <description>JUnit rule to simplify ldap unit tests.</description>
   
   <url>https://github.com/sdorra/ldap-unit</url>
 
@@ -222,7 +223,7 @@
   </distributionManagement>
   
   <properties>
-    <!-- test libraries -->
+    <!-- dependencies -->
     <junit.version>4.11</junit.version>
     <unboundid.version>2.3.4</unboundid.version>
     
