--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>sonia.junit</groupId>
   <artifactId>ldap-unit</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
   <name>ldap-unit</name>
   <description>JUnit rule to simplify ldap unit tests.</description>
@@ -24,6 +23,7 @@
     <connection>scm:git:https://github.com/sdorra/ldap-unit.git</connection>
     <developerConnection>scm:git:https://github.com/sdorra/ldap-unit.git</developerConnection>
     <url>https://github.com/sdorra/ldap-unit</url>
+    <tag>1.0.0</tag>
   </scm>
 
   <issueManagement>
