--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
   <groupId>sonia.junit</groupId>
   <artifactId>ldap-unit</artifactId>
-  <version>1.0.0</version>
+  <version>1.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>ldap-unit</name>
   <description>JUnit rule to simplify ldap unit tests.</description>
@@ -23,7 +23,7 @@
     <connection>scm:git:https://github.com/sdorra/ldap-unit.git</connection>
     <developerConnection>scm:git:https://github.com/sdorra/ldap-unit.git</developerConnection>
     <url>https://github.com/sdorra/ldap-unit</url>
-    <tag>1.0.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <issueManagement>
