--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,22 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>sonia.junit</groupId>
+  <groupId>com.github.sdorra</groupId>
   <artifactId>ldap-unit</artifactId>
-  <version>1.0.1-SNAPSHOT</version>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>jar</packaging>
   <name>ldap-unit</name>
   <description>JUnit rule to simplify ldap unit tests.</description>
-  
-  <url>https://github.com/sdorra/ldap-unit</url>
+  <url>http://sdorra.github.io/ldap-unit</url>
+
+  <licenses>
+    <license>
+      <name>MIT License</name>
+      <url>http://www.opensource.org/licenses/mit-license.php</url>
+    </license>
+  </licenses>
 
   <developers>
     <developer>
@@ -20,9 +28,9 @@
   </developers>
 
   <scm>
-    <connection>scm:git:https://github.com/sdorra/ldap-unit.git</connection>
-    <developerConnection>scm:git:https://github.com/sdorra/ldap-unit.git</developerConnection>
-    <url>https://github.com/sdorra/ldap-unit</url>
+    <connection>scm:git:git@github.com:sdorra/ldap-unit.git</connection>
+    <developerConnection>scm:git:git@github.com:sdorra/ldap-unit.git</developerConnection>
+    <url>git@github.com:sdorra/ldap-unit.git</url>
     <tag>HEAD</tag>
   </scm>
 
@@ -106,12 +114,28 @@
             <link>http://junit.sourceforge.net/javadoc/</link>
           </links>
         </configuration>
+        <executions>
+          <execution>
+            <id>attach-javadocs</id>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
         <version>2.2.1</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
       <plugin>
@@ -135,11 +159,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
-        <version>2.3.2</version>
+        <version>2.5</version>
         <configuration>
-          <pushChanges>false</pushChanges>
-          <localCheckout>true</localCheckout>
+          <autoVersionSubmodules>true</autoVersionSubmodules>
+          <useReleaseProfile>false</useReleaseProfile>
           <releaseProfiles>release</releaseProfiles>
+          <goals>deploy</goals>
           <tagNameFormat>@{project.version}</tagNameFormat>
         </configuration>
       </plugin>
@@ -153,6 +178,43 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-eclipse-plugin</artifactId>
         <version>2.6</version>
+      </plugin>
+      
+      <!--
+        Nexus staging plugin
+        http://central.sonatype.org/pages/apache-maven.html
+      -->
+      
+      <plugin>
+        <groupId>org.sonatype.plugins</groupId>
+        <artifactId>nexus-staging-maven-plugin</artifactId>
+        <version>1.6.2</version>
+        <extensions>true</extensions>
+        <configuration>
+          <serverId>ossrh</serverId>
+          <nexusUrl>https://oss.sonatype.org/</nexusUrl>
+          <autoReleaseAfterClose>true</autoReleaseAfterClose>
+        </configuration>
+      </plugin>
+      
+      <!--
+        GPG singature
+        http://central.sonatype.org/pages/apache-maven.html
+      -->
+      
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.5</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
       <!-- reporting -->
@@ -207,19 +269,17 @@
   </build>
   
   <distributionManagement>
-
+    
     <repository>
-      <id>maven.scm-manager.org</id>
-      <name>scm-manager release repository</name>
-      <url>http://maven.scm-manager.org/nexus/content/repositories/releases</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
     </repository>
-
+    
     <snapshotRepository>
-      <id>maven.scm-manager.org</id>
-      <name>scm-manager snapshot repository</name>
-      <url>http://maven.scm-manager.org/nexus/content/repositories/snapshots</url>
+      <id>ossrh</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
     </snapshotRepository>
-
+    
   </distributionManagement>
   
   <properties>
