--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>com.github.sdorra</groupId>
   <artifactId>ldap-unit</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <packaging>jar</packaging>
   <name>ldap-unit</name>
   <description>JUnit rule to simplify ldap unit tests.</description>
@@ -31,7 +31,7 @@
     <connection>scm:git:git@github.com:sdorra/ldap-unit.git</connection>
     <developerConnection>scm:git:git@github.com:sdorra/ldap-unit.git</developerConnection>
     <url>git@github.com:sdorra/ldap-unit.git</url>
-    <tag>HEAD</tag>
+    <tag>1.0.0</tag>
   </scm>
 
   <issueManagement>
